@@ -2,18 +2,21 @@ package hds;
 
 import java.sql.*;
 import java.util.*;
-import javax.servlet.http.*;
+import javax.naming.Context;
+import javax.naming.InitialContext;
+import javax.sql.DataSource;
+import jakarta.servlet.http.*;
 import org.apache.struts.action.*;
 import hds.HDSDate;
 
 public final class MakeScheduleAction extends Action {
 
-  public ActionForward perform(ActionMapping mapping,
+  public ActionForward execute(ActionMapping mapping,
       ActionForm form,
       HttpServletRequest request,
-      HttpServletResponse response) {
+      HttpServletResponse response) throws Exception {
    
-   javax.sql.DataSource dataSource;
+   DataSource dataSource;
    java.sql.Connection myConnection = null;
 	HttpSession session = request.getSession();
    ScheduleForm f = (ScheduleForm) form;
@@ -28,7 +31,7 @@ public final class MakeScheduleAction extends Action {
 
    ActionErrors errors = new ActionErrors();
 	// Report any errors we have discovered back to the original form
-	if (!errors.empty()) {
+	if (!errors.isEmpty()) {
       saveErrors(request, errors);
       saveToken(request);
 	   return (new ActionForward(mapping.getInput()));
@@ -46,7 +49,7 @@ public final class MakeScheduleAction extends Action {
 
    int sched_id = 0;
    try {
-      dataSource = servlet.findDataSource(null);
+      dataSource = (DataSource) ((Context) new InitialContext().lookup("java:comp/env")).lookup("jdbc/hds");
       myConnection = dataSource.getConnection();
 
       Statement stmt = myConnection.createStatement();
@@ -76,7 +79,7 @@ public final class MakeScheduleAction extends Action {
          }
       }
 
-   } catch (SQLException sqle) {
+   } catch (Exception sqle) {
       request.setAttribute("exception", sqle.getMessage());
       return (mapping.findForward("failure"));
    } finally {
@@ -84,14 +87,14 @@ public final class MakeScheduleAction extends Action {
       //sure the connection is closed
       try {
          myConnection.close();
-      } catch (SQLException e) {
+      } catch (Exception e) {
          request.setAttribute("exception", e.getMessage());
          return (mapping.findForward("failure"));
       }
    }
 
    session.setAttribute("defaultRules", def);
-   session.setAttribute("scheduleId", new Integer(sched_id));
+   session.setAttribute("scheduleId", Integer.valueOf(sched_id));
 
    // Forward control to the specified success target
    return (mapping.findForward("success"));
